--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "front-end-base-repo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.0",
-    "typescript": "4.7.3"
-  }
+	"name": "front-end-base-repo",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix",
+		"format": "prettier --write"
+	},
+	"dependencies": {
+		"next": "12.1.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "18.0.0",
+		"@types/react": "18.0.12",
+		"@types/react-dom": "18.0.5",
+		"eslint": "8.17.0",
+		"eslint-config-next": "12.1.6",
+		"eslint-config-prettier": "^8.5.0",
+		"prettier": "^2.7.0",
+		"typescript": "4.7.3"
+	}
 }
