--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
-		"format": "prettier --write"
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"next": "12.1.6",
