--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint:fix": "next lint --fix",
 		"format": "prettier --write .",
 		"prepare": "husky install",
-		"precommit": "lint-staged"
+		"precommit": "lint-staged",
+		"cypress": "cypress open"
 	},
 	"dependencies": {
 		"next": "12.1.6",
@@ -21,6 +22,7 @@
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.12",
 		"@types/react-dom": "18.0.5",
+		"cypress": "^10.1.0",
 		"eslint": "8.17.0",
 		"eslint-config-next": "12.1.6",
 		"eslint-config-prettier": "^8.5.0",
