--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --write .",
 		"prepare": "husky install",
 		"precommit": "lint-staged",
-		"cypress": "cypress open"
+		"cypress:open": "cypress open"
 	},
 	"dependencies": {
 		"next": "12.1.6",
