--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"format": "prettier --write .",
 		"prepare": "husky install",
 		"precommit": "lint-staged",
-		"cypress:open": "cypress open"
+		"cy:open": "cypress open",
+		"cy:run": "cypress run",
+		"test:cy": "start-server-and-test start http://localhost:3000 cy:run"
 	},
 	"dependencies": {
 		"next": "12.1.6",
@@ -29,6 +31,7 @@
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.1",
 		"prettier": "^2.7.0",
+		"start-server-and-test": "^1.14.0",
 		"typescript": "4.7.3"
 	}
 }
