--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
 {
-	"extends": ["next/core-web-vitals", "prettier"]
+	"plugins": ["@typescript-eslint"],
+	"extends": [
+		"next/core-web-vitals",
+		"plugin:jest-dom/recommended",
+		"plugin:@typescript-eslint/recommended",
+		"prettier"
+	],
+	"rules": {
+		"@typescript-eslint/no-unused-vars": "error"
+	},
+	"overrides": [
+		{
+			"files": ["**/*.test.js"],
+			"env": {
+				"jest": true
+			}
+		}
+	]
 }
