--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"precommit": "lint-staged",
 		"cy:open": "cypress open",
 		"cy:run": "cypress run",
-		"test:cy": "start-server-and-test start http://localhost:3000 cy:run"
+		"test:cy": "start-server-and-test start http://localhost:3000 cy:run",
+		"test:jest": "jest --watch",
+		"test:jest:ci": "jest --ci"
 	},
 	"dependencies": {
 		"next": "12.1.6",
@@ -21,17 +23,28 @@
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@types/cypress": "^1.1.3",
+		"@types/jest": "^28.1.1",
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.12",
 		"@types/react-dom": "18.0.5",
+		"@types/testing-library__jest-dom": "^5.14.3",
+		"@types/testing-library__react": "^10.2.0",
+		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"cypress": "^10.1.0",
 		"eslint": "8.17.0",
 		"eslint-config-next": "12.1.6",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-jest-dom": "^4.0.2",
 		"husky": "^8.0.1",
+		"jest": "^28.1.1",
+		"jest-environment-jsdom": "^28.1.1",
 		"lint-staged": "^13.0.1",
 		"prettier": "^2.7.0",
 		"start-server-and-test": "^1.14.0",
+		"ts-node": "^10.8.1",
 		"typescript": "4.7.3"
 	}
 }
