--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
         run: yarn build
 
       - name: Run tests with jest
-        run: yarn test:jest
+        run: yarn test:jest:ci
 
       - name: Run tests with cypress
         run: yarn test:cy
