--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,21 @@
 		"plugin:@typescript-eslint/recommended",
 		"prettier"
 	],
+	"settings": {
+		"import/resolver": {
+			"typescript": {
+				"alwaysTryTypes": true
+			}
+		}
+	},
 	"rules": {
-		"@typescript-eslint/no-unused-vars": "error"
+		"@typescript-eslint/no-unused-vars": "error",
+		"@typescript-eslint/no-explicit-any": [
+			"error",
+			{
+				"ignoreRestArgs": true
+			}
+		]
 	},
 	"overrides": [
 		{
